Deployments/traefik/test-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-secure
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 443
      name: websecure
      targetPort: 443
